Починил LocalDriver: сессия не создавалась на Appium 2
Четыре причины, по которым локальный прогон не доходил до теста:

- адрес http://localhost:4723/wd/hub. В Appium 2 базовый путь — корень,
  старый префикс отдаёт 'No route found' и 404, то есть запрос не доезжает
  до драйвера и тест падает с SessionNotCreatedException;
- серийник устройства передавался как deviceName. Appium при выборе
  устройства эту capability не смотрит: сначала udid, затем platformVersion,
  иначе первое устройство из adb devices. С поднятым эмулятором и
  подключённым телефоном тест уходил не туда, куда ожидалось;
- приложение качалось по rolling-тегу latest. Прогон такой сборки на реальном
  устройстве показал переписанный на Compose интерфейс без нужных локаторов,
  поэтому версия прибита к 2.7.50450-r-2023-08-15 из архива Wikimedia;
- releases.wikimedia.org отвечает 403 на дефолтный User-Agent Java, так что
  APK скачивается через URLConnection с явным User-Agent.

APK лежит в apps/ рядом с проектом: clean не стирает, processTestResources
не копирует.

Co-authored-by: dmitry.5401.k <dmitry.5401.k@gmail.com>